k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-task-mgr-api
  namespace: task-mgr
spec:
  stripPrefix:
    prefixes:
      - /task-mgr-api
