k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-mgr
  namespace: task-mgr
  labels:
    app: task-mgr
spec:
  replicas: 2 # Apper kan trygt skaleres opp i flere kopier (pods)
  selector:
    matchLabels:
      app: task-mgr
  template:
    metadata:
      labels:
        app: task-mgr
    spec:
      # 1. INIT-CONTAINERS:
      #    a) Vent til Postgres er klar før appen starter
      containers:
        - name: app
          image: homelab:30500/task-mgr:latest # <-- Erstatt med ditt eget app-bilde
          ports:
            - containerPort: 8072 # Porten appen din lytter på internt
          # Miljøvariabler appen din trenger for å koble til databasen
