k8s/pg-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: task-mgr
  labels:
    app: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
              name: postgres

          # Koble mappen på innsiden av containeren til ditt volum
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres-db-data # Unngår problemer med "lost+found"-mapper i k3s

          # Helsesjekker i Kubernetes (tilsvarer docker-compose healthcheck)
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "$(POSTGRES_USER)", "-d", "taskdb"]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "$(POSTGRES_USER)", "-d", "taskdb"]
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5

      # Definer koblingen til din eksisterende PVC her
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
