k8s/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: task-mgr
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
