k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-mgr-service
  namespace: task-mgr
spec:
  ports:
    - port: 80
      targetPort: 8072 # Videresender webtrafikk fra port 80 til appens port 8080
  selector:
    app: task-mgr
  type: ClusterIP # Bruk ClusterIP internt, eller ClusterIP + Ingress for ekstern trafikk
