k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-mgr-ingress
  namespace: task-mgr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: task-mgr-strip-task-mgr-api@kubernetescrd
spec:
  rules:
    - host: homelab
      http:
        paths:
          - path: /task-mgr-api
            pathType: Prefix
            backend:
              service:
                name: task-mgr-service
                port:
                  number: 80
